# vietnamese-sentiment-analysis-siic

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  GITHUB_SETUP.md  Makefile  QUICK_START.md  README.md  SIC_AI_Capstone Project_Final Report.docx.txt  emotion_analysis_results.csv  pyproject.toml  pytest.ini  requirements.txt  setup.py  tatus  youtube_comments.csv
.github/workflows/: ci.yml
api/: main.py  requirements.txt
config/: config.py
dashboard/: app.py  requirements.txt
dashboard/.streamlit/: config.toml
data/: processed_uit_vsfc_data.csv
docs/: ARCHITECTURE_OVERVIEW.md  DEPLOYMENT_GUIDE.md  EXECUTIVE_SUMMARY.md  FINAL_PROJECT_SUMMARY.md  GETTING_STARTED.md  SYSTEM_SPECIFICATIONS.md  USER_MANUAL.md  demo_presentation_structure.md  demo_script_guide.md
documents/: BUG_REPORT_TEMPLATE.md  DESIGN.md  INSTALLATION_MANUAL.md  NON_COMPLIANCE_REPORT.md  SPECIFICATION.md  TRAINING_MATERIAL.md  USER_MANUAL.md  VALIDATION.md  VERIFICATION.md
scripts/: compare_phobert_results.py  comprehensive_model_analysis.py  crawYoutube.py  create_final_evaluation_report.py  dashboard.py  evaluate.py  optimize_lstm_improved.py  optimize_lstm_model.py  optimize_performance.py  plot_phobert_comparison.py  plot_training_history.py  run_pipeline.py  run_tests.sh  siic.bat  test_phobert_baseline.py  train_phobert_clean.py
siic/: __init__.py
siic/data/: __init__.py  loaders.py  preprocessors.py  samplers.py
siic/evaluation/: __init__.py  comprehensive.py  metrics.py
siic/models/: __init__.py  baselines.py  lstm.py  phobert.py
siic/training/: __init__.py  optimizers.py  trainers.py
siic/utils/: __init__.py  config.py  logging.py
src/data_processing/: create_large_sample.py  load_uit_vsfc.py  preprocess.py
src/models/: baseline_models.py  lstm_model.py  phobert_model.py
tests/: requirements-test.txt  test_api.py  test_models.py
